# scara_robot_kinematics

./: .gitattributes  .gitignore  README.md
Docker/: Dockerfile  entrypoint.sh
ros_ws/src/scara_tests/: CMakeLists.txt  package.xml
ros_ws/src/scara_tests/scripts/: test_fk.py
