<?xml version="1.0"?>
<package format="2">
  <name>scara_tests</name>
  <version>0.0.0</version>
  <description>Tests for SCARA kinematics</description>
  <maintainer email="ivonluizgarcia@email.com">Ivon Garcia</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
</package>
